--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.0.0-rc.10",
