--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "metro-start": "react-native start",
+    "metro-stop": "react-native stop"
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
@@ -18,24 +20,24 @@
     "@react-navigation/stack": "^6.3.10",
     "dotenv": "^16.0.3",
     "eslint-plugin-react-hooks": "^5.0.0-next-fabef7a6b-20221215",
-    "expo": "~47.0.8",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^48.0.0",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
     "firebase": "^9.15.0",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
+    "react": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^5.0.0-rc.10",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "eslint": "^8.28.0",
     "prettier": "^2.8.0"
