--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.1.1",
@@ -22,11 +23,12 @@
     "eslint-plugin-react-hooks": "^5.0.0-next-fabef7a6b-20221215",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
+    "expo-dotenv": "^0.1.0",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.15.0",
     "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^5.0.0-rc.10",
