--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "expo-constants": "~14.2.1",
     "expo-dotenv": "^0.1.0",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.15.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-spacer": "^1.7.0",
     "react-native-svg": "13.4.0",
     "styled-components": "^5.3.6"
   },
