--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@expo-google-fonts/oswald": "^0.2.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/database": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
@@ -23,11 +26,11 @@
     "eslint-plugin-react-hooks": "^5.0.0-next-fabef7a6b-20221215",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-dotenv": "^0.1.0",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.15.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
@@ -39,7 +42,10 @@
     "react-native-screens": "~3.20.0",
     "react-native-spacer": "^1.7.0",
     "react-native-svg": "13.4.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-build-properties": "0.6.0",
+    "expo-modules-autolinking": "1.2.0",
+    "expo-sample-pedometer": "0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
