--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^2.1.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-reanimated": "~2.14.4",
