--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/oswald": "^0.2.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
